fix: fix StockLogController parameter type (List<?> -> no @RequestBody) to avoid 400 error